Kubernetes/stock_automation/deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-automation-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stock-automation-api
  template:
    metadata:
      labels:
        app: stock-automation-api
    spec:
      securityContext:
        runAsUser: 1000
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: stock-automation-api
        image: cerit.io/roman_alexander_mariancik/stock-automation-api-image
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "1Gi"
            cpu: "1"
          limits:
            memory: "1Gi"
            cpu: "1"
