Kubernetes/stock_automation/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stock-automation-svc
spec:
  type: ClusterIP
  ports:
  - name: stock-automation-port
    port: 80
    targetPort: 80
  selector:
    app: stock-automation
