Kubernetes/stock_automation/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stock-automation-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "stock-automation-cookie"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
spec:
  tls:
    - hosts:
        - "stock-automation.dyn.cloud.e-infra.cz"
      secretName: stock-automation-dyn-cloud-e-infra-cz-tls
  rules:
  - host: "stock-automation.dyn.cloud.e-infra.cz"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
            service:
              name: stock-automation-svc
              port:
                number: 80
